--- a/config.yaml
+++ b/config.yaml
@@ -89,3 +89,26 @@ Standards:
         Type: Lesson
         UID: cbd53d1c-3374-4a55-804b-85defb26bd4b
         Path: /intermediate-sql/problem-set-intermediate-sql.md
+  -
+    Title: More Selecting In SQL
+    Description: "Limiting Results, Ordering Results, Aggregate Functions and Grouping"
+    UID: 29f75f91-0453-468c-a724-d6b90a045e6a
+    SuccessCriteria:
+      - success criteria
+    ContentFiles:
+      -
+        Type: Lesson
+        UID: f17bddc5-338d-4077-b4fe-5e9764000b87
+        Path: /more-selecting-in-sql/limiting.md
+      -
+        Type: Lesson
+        UID: ec61db9d-17e7-4aff-ae18-904c13cdb8cd
+        Path: /more-selecting-in-sql/ordering.md
+      -
+        Type: Lesson
+        UID: 7b23e0bb-64ea-4f55-aca4-4502d9f8e7fb
+        Path: /more-selecting-in-sql/aggregate-functions.md
+      -
+        Type: Lesson
+        UID: af18e4ef-18aa-432c-9f34-0375f4dbb82a
+        Path: /more-selecting-in-sql/grouping.md
