config: adds testing-our-apis

--- a/config.yaml
+++ b/config.yaml
@@ -1,29 +1,25 @@
 ---
 Standards:
   -
-    Title: Intro To Web Development
-    Description: "Web Applications and Layers, Intro to Clients, Servers, HTTP, Sequence Diagrams, Activity: Layers"
-    UID: 87ee542387da94693acb5efb099b7f58
+    Title: Testing Our Apis
+    Description: Testing Our Apis
+    UID: e7cb1f63923b38e37e787f78784653ec
     SuccessCriteria:
       - success criteria
     ContentFiles:
       -
-        Type: Instructor
-        UID: c674f6dd20d7be77cfb94798b04ba3b7
-        Path: /intro-to-web-development/intro-to-web-development.instructor.md
+        Type: Lesson
+        UID: c49f1e46b7e1f26263c71173af781cea
+        Path: /testing-our-apis/environments-and-env-vars.md
       -
         Type: Lesson
-        UID: fb82af67544ea4e47867dacf14422750
-        Path: /intro-to-web-development/web-applications-and-layers.md
+        UID: f153ea3be2591354fccbc62912327060
+        Path: /testing-our-apis/dot-env-and-the-test-db.md
       -
         Type: Lesson
-        UID: 3b85293903e714dbf08ba517f828ac88
-        Path: /intro-to-web-development/intro-to-clients-servers-http.md
+        UID: 8dfac72f68845ac31b3527aeba524c01
+        Path: /testing-our-apis/fixtures.md
       -
         Type: Lesson
-        UID: 0cb41fed41e0e32dfb1adbd4b5d61c9a
-        Path: /intro-to-web-development/sequence-diagrams.md
-      -
-        Type: Lesson
-        UID: 50ce8362260e6524b31d9c6a8c990c2c
-        Path: /intro-to-web-development/activity-layers.md
+        UID: ae6d7749089a176f86e664172c9c3102
+        Path: /testing-our-apis/testing-apis.md
