config: adds requests-and-responses

--- a/config.yaml
+++ b/config.yaml
@@ -27,3 +27,43 @@ Standards:
         Type: Lesson
         UID: 50ce8362260e6524b31d9c6a8c990c2c
         Path: /intro-to-web-development/activity-layers.md
+
+  -
+    Title: Requests And Responses
+    Description: "Request-Response Cycle, Sending Requests from Postman, API Keys, Sending Requests With Python, Problem Set: Requests With Python, Activity: Web API Jigsaw"
+    UID: b33d004935f89cb3dc27032aed9a1971
+    SuccessCriteria:
+      - success criteria
+    ContentFiles:
+      -
+        Type: Instructor
+        UID: f8718b982976e86f238c9e3b0af77636
+        Path: /requests-and-responses/requests-and-responses.instructor.md
+      -
+        Type: Lesson
+        UID: 725ecafa914bb1b7bd4f47a305398ae8
+        Path: /requests-and-responses/request-response-cycle.md
+      -
+        Type: Lesson
+        UID: 36352066c1e128d38ee834fb0db51513
+        Path: /requests-and-responses/sending-requests-from-postman.md
+      -
+        Type: Lesson
+        UID: 0bf2679dc61b68a5d8683c021f5e5621
+        Path: /requests-and-responses/api-keys.md
+      -
+        Type: Lesson
+        UID: 3ce410c74f7c810715f9982420878886
+        Path: /requests-and-responses/sending-requests-with-python.md
+      -
+        Type: Instructor
+        UID: 4e147331c0920ff789c815744d162587
+        Path: /requests-and-responses/problem-set-requests-with-python.instructor.md
+      -
+        Type: Lesson
+        UID: 3c6844408261fe7c7d50f7dc4dc2c447
+        Path: /requests-and-responses/problem-set-requests-with-python.md
+      -
+        Type: Lesson
+        UID: 2f8f732d3d523c2302f4568e519bcbff
+        Path: /requests-and-responses/activity-web-api-jigsaw.md
