--- a/config.yaml
+++ b/config.yaml
@@ -2,19 +2,11 @@
 Standards:
   -
     Title: Data In Tables
-    Description: "Activity: Data in tables, Data in tables"
+    Description: "Data in tables, Activity: Data in tables"
     UID: f7c302282a7e78968f846372a19f50ef
     SuccessCriteria:
       - success criteria
     ContentFiles:
-      -
-        Type: Instructor
-        UID: 62c24181bff87815cf3039e30c8c32b2
-        Path: /data-in-tables/instructor-activity-data-in-tables.md      
-      -
-        Type: Lesson
-        UID: a5d0460ebba87354036cecef3e810940
-        Path: /data-in-tables/activity-data-in-tables.md
       -
         Type: Instructor
         UID: 50c412213820ae1e7ffd5a432f8a2fb7
@@ -23,6 +15,14 @@ Standards:
         Type: Lesson
         UID: 0e1f2fc10fdeffcb430193b38662480e
         Path: /data-in-tables/data-in-tables.md
+      -
+        Type: Instructor
+        UID: 62c24181bff87815cf3039e30c8c32b2
+        Path: /data-in-tables/instructor-activity-data-in-tables.md      
+      -
+        Type: Lesson
+        UID: a5d0460ebba87354036cecef3e810940
+        Path: /data-in-tables/activity-data-in-tables.md
   -
     Title: Intro To Sql
     Description: Intro to SQL, Adding new records, Retrieving records, Updating ecords, Deleting records
@@ -30,6 +30,10 @@ Standards:
     SuccessCriteria:
       - success criteria
     ContentFiles:
+      -
+        Type: Instructor
+        UID: d208cde984a0236f321a3a2216132286
+        Path: /intro-to-sql/intro-to-sql.instructor.md
       -
         Type: Lesson
         UID: bf845a0d8d9b36277b4a65ad5a323ec6
@@ -39,21 +43,9 @@ Standards:
         UID: 9f6237c34cd80959b46a2a6b197e04f5
         Path: /intro-to-sql/sql-setup.md
       -
-        Type: Instructor
-        UID: 431e288ed7b0fa2b88b7599ae09a3543
-        Path: /intro-to-sql/activity-intro-to-sql.instructor.md
-      -
-        Type: Lesson
-        UID: 1ccd31d7b789d74e78d94c236193bb8d
-        Path: /intro-to-sql/activity-intro-to-sql.md 
-      -
         Type: Lesson
         UID: 5166b21899f0663aace050ca240e65c4
         Path: /intro-to-sql/adding-new-records.md
-      -
-        Type: Instructor
-        UID: d208cde984a0236f321a3a2216132286
-        Path: /intro-to-sql/intro-to-sql.instructor.md
       -
         Type: Lesson
         UID: 9bd533be21a9cc9981797c67b9991514
@@ -66,6 +58,14 @@ Standards:
         Type: Lesson
         UID: 66c659ae-9887-4e01-a059-a73b22847a5d
         Path: /intro-to-sql/deleting-records.md
+      -
+        Type: Instructor
+        UID: 431e288ed7b0fa2b88b7599ae09a3543
+        Path: /intro-to-sql/activity-intro-to-sql.instructor.md
+      -
+        Type: Lesson
+        UID: 1ccd31d7b789d74e78d94c236193bb8d
+        Path: /intro-to-sql/activity-intro-to-sql.md 
   -
     Title: Intermediate SQL
     Description: "Database Relationships, Activty: drawing relationships, Establishing Relationships, Database Joins"
