--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,7 @@
 Standards:
   -
     Title: Data In Tables
-    Description: "Data in tables, Activity: Data in tables"
+    Description: "Data in Tables, Activity: Data in Tables"
     UID: f7c302282a7e78968f846372a19f50ef
     SuccessCriteria:
       - success criteria
@@ -25,7 +25,7 @@ Standards:
         Path: /data-in-tables/activity-data-in-tables.md
   -
     Title: Intro To Sql
-    Description: Intro to SQL, Adding new records, Retrieving records, Updating ecords, Deleting records
+    Description: "Intro to SQL, Adding New Records, Retrieving Records, Updating Records, Deleting Records, Problem Set: Intro to SQL, Activity: Intro to SQL"
     UID: 3211fc3d75369f96b537a4535fcbba6d
     SuccessCriteria:
       - success criteria
@@ -59,6 +59,10 @@ Standards:
         UID: 66c659ae-9887-4e01-a059-a73b22847a5d
         Path: /intro-to-sql/deleting-records.md
       -
+        Type: Lesson
+        UID: tTqwLh
+        Path: /intro-to-sql/problem-set-intro-to-sql.md
+      -
         Type: Instructor
         UID: 431e288ed7b0fa2b88b7599ae09a3543
         Path: /intro-to-sql/activity-intro-to-sql.instructor.md
@@ -68,7 +72,7 @@ Standards:
         Path: /intro-to-sql/activity-intro-to-sql.md 
   -
     Title: Intermediate SQL
-    Description: "Database Relationships, Activty: drawing relationships, Establishing Relationships, Database Joins"
+    Description: "Database Relationships, Establishing Relationships, Database Joins, Problem Set: Intermediate SQL"
     UID: 11a8027f-bd04-4c47-b4d3-36209af1068d
     SuccessCriteria:
       - success criteria
