--- a/config.yaml
+++ b/config.yaml
@@ -76,7 +76,7 @@ Standards:
         Path: /intro-to-sql/activity-intro-to-sql.md 
   -
     Title: More Selecting In SQL
-    Description: "Compound Conditions, Limit, Ordering, Optional: Aggregate Functions, Optional: Grouping"
+    Description: "Compound Conditions, Ordering, Limit, Optional: Aggregate Functions, Optional: Grouping"
     UID: 29f75f91-0453-468c-a724-d6b90a045e6a
     SuccessCriteria:
       - success criteria
@@ -87,12 +87,12 @@ Standards:
         Path: /more-selecting-in-sql/compound-conditions.md
       -
         Type: Lesson
-        UID: f17bddc5-338d-4077-b4fe-5e9764000b87
-        Path: /more-selecting-in-sql/limit.md
-      -
-        Type: Lesson
         UID: ec61db9d-17e7-4aff-ae18-904c13cdb8cd
         Path: /more-selecting-in-sql/ordering.md
+      -
+        Type: Lesson
+        UID: f17bddc5-338d-4077-b4fe-5e9764000b87
+        Path: /more-selecting-in-sql/limit.md
       -
         Type: Lesson
         UID: 7b23e0bb-64ea-4f55-aca4-4502d9f8e7fb
