--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,7 @@
 Standards:
   -
     Title: Sorting Algos
-    Description: "Sorting Algorithms, Bubble Sort, Selection Sort, Insertion Sort, Merge Sort, Problem Set: Sorting Algorithms, Activity: Sorting Algorithms"
+    Description: "Sorting Algorithms, Bubble Sort, Selection Sort, Insertion Sort, Merge Sort, Problem Set: Sorting Algorithms"
     UID: 184d8af4792d6c2f80c90b27919caa10
     SuccessCriteria:
       - success criteria
@@ -32,6 +32,6 @@ Standards:
         UID: 383253988f7afc58dd4fe867d42d7cad
         Path: /sorting-algos/problem-set-sorting-algorithms.md
       -
-        Type: Lesson
+        Type: Instructor
         UID: 70acaebba6da64c98fef0d184cd40e5b
-        Path: /sorting-algos/activity-sorting-algorithms.md
+        Path: /sorting-algos/activity-sorting-algorithms.instructor.md
