Add git branching to Unit 2

--- a/config.yaml
+++ b/config.yaml
@@ -152,6 +152,25 @@ Standards:
         UID: 6e0b2738-99c1-44f6-96c3-f17aaea55fcb
         Path: /requests-and-responses-in-flask/activity-solar-system-api-setup-create-read.md
   -
+    Title: Branches In Git
+    Description: "Branches, Using Branches in Git, Problem Set: Git"
+    UID: 76a4001e9bc2734c2e93ede4b8f1297e
+    SuccessCriteria:
+      - success criteria
+    ContentFiles:
+      -
+        Type: Lesson
+        UID: 6c8aa01cc55f51f3cb90f1fd9f851595
+        Path: /branches-in-git/branches.md
+      -
+        Type: Lesson
+        UID: f88500a61648d8752735ca1b0b3e9522
+        Path: /branches-in-git/using-branches-in-git.md
+      -
+        Type: Lesson
+        UID: a23c8692ae7b601177cd574151717d51
+        Path: /branches-in-git/problem-set-git.md
+  -
     Title: Data In Tables
     Description: "Data in Tables, Activity: Data in Tables"
     UID: f7c302282a7e78968f846372a19f50ef
