--- a/config.yaml
+++ b/config.yaml
@@ -245,7 +245,7 @@ Standards:
         UID: 1ccd31d7b789d74e78d94c236193bb8d
         Path: /intro-to-sql/activity-intro-to-sql.md
   -
-    Title: More Selecting In SQL
+    Title: (Optional) More Selecting In SQL
     Description: "Compound Conditions, Ordering, Limit, Problem Set: More Selecting in SQL"
     UID: 29f75f91-0453-468c-a724-d6b90a045e6a
     SuccessCriteria:
@@ -267,29 +267,22 @@ Standards:
         Type: Lesson
         UID: f9f13580-bd04-442a-8944-34864f3de6a2
         Path: /more-selecting-in-sql/problem-set-more-selecting-in-sql.md
-  -
-    Title: Even More SQL
-    Description: "Aggregate Functions, Grouping, Modifying Tables in SQL, Modifying Databases in SQL"
-    UID: adb24d77-6638-4351-9b81-4f6bb7fd26f9
-    SuccessCriteria:
-      - success criteria
-    ContentFiles:
       -
         Type: Lesson
         UID: 7b23e0bb-64ea-4f55-aca4-4502d9f8e7fb
-        Path: /even-more-sql/aggregate-functions.md
+        Path: /more-selecting-in-sql/aggregate-functions.md
       -
         Type: Lesson
         UID: af18e4ef-18aa-432c-9f34-0375f4dbb82a
-        Path: /even-more-sql/grouping.md
+        Path: /more-selecting-in-sql/grouping.md
       -
         Type: Lesson
         UID: 139ef877-f6ea-4455-8cad-e42849c19bf8
-        Path: /even-more-sql/modifying-tables-in-sql.md
+        Path: /more-selecting-in-sql/modifying-tables-in-sql.md
       -
         Type: Lesson
         UID: eed7f313-69fe-4881-9b7c-829860adeb4e
-        Path: /even-more-sql/modifying-databases-in-sql.md
+        Path: /more-selecting-in-sql/modifying-databases-in-sql.md
   -
     Title: Building an API With Models
     Description: "Models, Models Setup, Create and Read, Problem Set: Building an API"
