--- a/config.yaml
+++ b/config.yaml
@@ -22,13 +22,17 @@ Standards:
       -
         Type: Lesson
         UID: 0cb41fed41e0e32dfb1adbd4b5d61c9a
-        Path: /intro-to-web-development/sequence-diagrams.md
+        Path: /intro-to-web-development/sequence-diagrams.md\
+      -
+        Type: Lesson
+        UID: 725ecafa914bb1b7bd4f47a305398ae8
+        Path: /requests-and-responses/request-response-cycle.md
       -
         Type: Lesson
         UID: 50ce8362260e6524b31d9c6a8c990c2c
         Path: /intro-to-web-development/activity-layers.md
   -
-    Title: Requests And Responses
+    Title: Requests And Responses in Postman and Python
     Description: "Request-Response Cycle, Sending Requests from Postman, API Keys, Sending Requests With Python, Problem Set: Requests With Python, Activity: Web API Jigsaw"
     UID: b33d004935f89cb3dc27032aed9a1971
     SuccessCriteria:
@@ -38,10 +42,6 @@ Standards:
         Type: Instructor
         UID: f8718b982976e86f238c9e3b0af77636
         Path: /requests-and-responses/requests-and-responses.instructor.md
-      -
-        Type: Lesson
-        UID: 725ecafa914bb1b7bd4f47a305398ae8
-        Path: /requests-and-responses/request-response-cycle.md
       -
         Type: Lesson
         UID: 36352066c1e128d38ee834fb0db51513
